src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>ContentDirectory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-4384 Look up to Content Directory</description>
        <inlineHelpText>Look up to Content Directory</inlineHelpText>
        <label>Content Directory</label>
        <referenceTo>ContentDirectory__c</referenceTo>
        <relationshipLabel>Content Versions</relationshipLabel>
        <relationshipName>ContentVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DocumentType__c</fullName>
        <description>SFDC1-4384 Document type for the content</description>
        <inlineHelpText>Select the type for the content document</inlineHelpText>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annex</fullName>
                </value>
                <value>
                    <fullName>Primer</fullName>
                </value>
                <value>
                    <fullName>Rules Guide</fullName>
                </value>
                <value>
                    <fullName>Technical Guide</fullName>
                </value>
                <value>
                    <fullName>User Guide</fullName>
                </value>
                <value>
                    <fullName>Supplement</fullName>
                </value>
                <value>
                    <fullName>Release Notes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JiraID__c</fullName>
        <description>SFDC1-4384 Jira ID associated to the content</description>
        <inlineHelpText>Link Jira ID associated to the content</inlineHelpText>
        <label>Jira ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-2445 When the Content Version is created via migration this field will be populated by the migration with the ID of the legacy system.</description>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarkitSERVexternalURL__c</fullName>
        <description>SFDC1-4384 This link can be used to share hidden files. Only works for the MarkitSERV Documentation Portal!</description>
        <formula>IF(NOT(ISBLANK(ContentDirectory__c)), 
&apos;https://products.markit.com/support/Documentation/Document/&apos;+ Id,&apos;&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This link can be used to share hidden files. Only works for the MarkitSERV Documentation Portal!</inlineHelpText>
        <label>MarkitSERV external URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKIDContentVersion__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>CnV{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID ContentVersion</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ParentID__c</fullName>
        <description>SFDC1-7947 hidden field serves as a temporary place-holder to store the ContentDocument&apos;s parent ID to assign the LinkedEntityId when creating ContentDocumentLink</description>
        <inlineHelpText>Hidden field serves as a temporary place-holder to store the ContentDocument&apos;s parent ID to assign the LinkedEntityId when creating ContentDocumentLink</inlineHelpText>
        <label>Parent ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicationDate__c</fullName>
        <description>SFDC1-4384 Date on which content is published</description>
        <inlineHelpText>Link the date on which content is published</inlineHelpText>
        <label>Publication Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X18DigitID__c</fullName>
        <description>SFDC1-4384 18 digit case safe id used in customer portal</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>18 digit case safe id used in customer portal</inlineHelpText>
        <label>18 Digit ID</label>
        <type>Text</type>
    </fields>
</CustomObject>